FIX | Style bug of CheckBox component on iOS

--- a/components/common/CheckBox/style.module.scss
+++ b/components/common/CheckBox/style.module.scss
@@ -28,7 +28,8 @@
     .checkBox {
       position: relative;
       background: $primary-color;
-      outline-color: $primary-color;
+      border-color: $primary-color;
+      border-radius: 4px;
 
       &::before {
         position: absolute;
@@ -45,8 +46,8 @@
   .checkBox {
     width: 20px;
     height: 20px;
-    outline: 1px solid #D6D9E6;
-    border-radius: 4px;
+    border: 1px solid $border-color;
+    border-radius: 0;
     appearance: none;
   }
 
